# Qmdr

./: .gitignore  README.md  build-windows.ps1  main.py  orjson.py  pyproject.toml
.github/installer/: qmdr.iss
.github/workflows/: android-apk.yml  windows-build.yml
qmdr/: __init__.py  app.py  coordinator.py  credential_service.py  models.py  music.py  playlist.py  quality.py  settings.py  utils.py
tests/: test_core.py
